# patchwork

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/presets/ml/: imagenet_labels.txt
assets/presets/wgsl/: audio_reactive.wgsl  gradient.wgsl  plasma.wgsl  spinsquare.wgsl
example-projects/: README.md
example-projects/ai-shader-controls/: project.json
example-projects/audio-synth-effects/: project.json
example-projects/camera-ml-detection/: project.json
example-projects/openai-wgsl-generation/: EXAMPLE_PROMPTS.md  SETUP.md  api_keys.json.example  project.json  shader-from-api.txt
examples/: 01_basic_math.json  02_synth_effects.json  03_image_editing.json  04_ai_wgsl_generator.json  05_open_blocks_hub.json  demo_file_to_wgsl.json  demo_math.json  demo_mouse_midi.json  demo_text_wgsl.json  script_advanced.json  script_template.json
examples/api-test/: project.json  sample-prompt.json  system-prompt.txt
examples/audio/: project.json
examples/loop/: project.json
examples/openblock-hardware/: project.json
examples/simple-math/: project.json
examples/video/: project.json
examples/wgsl/: project.json
src/: app.rs  audio.rs  gpu_image.rs  graph.rs  http.rs  icons.rs  main.rs  mcp.rs  midi.rs  node_trait.rs  ob.rs  osc.rs  serial.rs  system_log.rs
src/app/: canvas.rs  interaction.rs  io.rs  menus.rs  mod.rs  undo.rs
src/audio/: analysis.rs  biquad.rs  buffers.rs  callback.rs  chain.rs  clap_host.rs  compile.rs  decode.rs  effects.rs  engine.rs  manager.rs  mod.rs  params.rs  processor.rs  smoothed.rs  sources.rs  swap.rs  waveform.rs
src/audio/processors/: analyzer.rs  clap.rs  effects.rs  input.rs  mixer.rs  mod.rs  sampler.rs  speaker.rs  synth.rs
src/nodes/: add_node.rs  ai_request.rs  audio_analyzer.rs  audio_delay.rs  audio_device.rs  audio_distortion.rs  audio_eq.rs  audio_filter.rs  audio_fx.rs  audio_gain.rs  audio_input.rs  audio_mixer.rs  audio_player.rs  audio_reverb.rs  audio_sampler.rs  blend.rs  clap_plugin.rs  color.rs  color_channel_node.rs  color_curves.rs  color_node.rs  comment.rs  comment_node.rs  console.rs  console_node.rs  crop.rs  crop_node.rs  curve.rs  display.rs  display_node.rs  draw.rs  draw_node.rs  file.rs  file_editor.rs  file_menu.rs  file_menu_node.rs  file_node.rs  folder_browser.rs  folder_browser_node.rs  gate.rs  (+66 more)
