[package]
name = "patchwork"
version = "0.0.1"
edition = "2024"

[dependencies]
eframe = "0.31.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"

[package.metadata.packager]
product-name = "Patchwork"
identifier = "com.openblocks.patchwork"
before-packaging-command = "cargo build --release"
formats = ["app", "dmg"]
icons = ["icons/icon.icns"]
binaries = [{ path = "patchwork", main = true }]

[package.metadata.packager.macos]
minimum-system-version = "11.0"
