[package]
name = "patchwork"
version = "0.0.1"
edition = "2024"
license = "MIT"
authors = ["OpenBlocks"]
description = "A node-based visual programming environment in Rust with EGUI"

[dependencies]
eframe = { version = "0.31.0", features = ["wgpu"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
midir = "0.10"
serialport = "4"
rhai = "1.17"
rosc = "0.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }
naga = { version = "24", features = ["wgsl-in"] }
pollster = "0.4"
regex = "1"
bytemuck = { version = "1", features = ["derive"] }
libloading = "0.8"
cpal = "0.15"
symphonia = { version = "0.5", default-features = false, features = ["mp3", "ogg", "flac", "pcm", "isomp4", "aac"] }
sysinfo = "0.33"
libc = "0.2"
open = "5"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
ort = "2.0.0-rc.12"
dirs = "6"

[package.metadata.packager]
product-name = "PatchWork"
identifier = "com.openblocks.patchwork"
before-packaging-command = "cargo build --release"
formats = ["app", "dmg"]
icons = ["icons/icon.icns"]
binaries = [{ path = "patchwork", main = true }]

[package.metadata.packager.macos]
minimum-system-version = "11.0"
